# course_project_compiler

./: CMakeLists.txt  lexer.cpp  lexer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  oldCMAKE.md  parser.cpp  parser.h  parser_rules.h  sema.cpp  sema.h  syntaxtree.cpp  syntaxtree.h  translation.cpp  translation.h
.qt/: QtDeploySupport.cmake
